Update Savings Plan Guide

--- a/source/documentation/team-information/internal-processes/savings-plan.html.md.erb
+++ b/source/documentation/team-information/internal-processes/savings-plan.html.md.erb
@@ -1,8 +1,8 @@
 ---
 owner_slack: "#coat-notifications"
 title: Assessment and Purchase of Savings Plans
-last_reviewed_on: 2025-08-12
-review_in: 3 months
+last_reviewed_on: 2026-02-10
+review_in: 6 months
 ---
 
 # Assessment and Purchase of Savings Plans
@@ -15,12 +15,14 @@ The guide provides a reusable framework to maximise effective use of SPs, and av
 
 ## Types of Savings Plan
 
-There are 3 types of Savings Plan available:
+There are 4 types of Savings Plan available:
+
 - Compute
 - EC2 Instance
 - SageMaker AI
+- Database
 
-Our preferred type of plan is **Compute Saving Plan**, as it provides the greatest flexibility for how it applies savings and provides better coverage for the types of resources used by MoJ.
+Our preferred type of plan is **Compute Saving Plan**, as it provides the greatest flexibility for how it applies savings and provides better coverage for the types of resources used by MoJ. In 2026 we also introduced a Database Savings Plan to improve database rate reductions for our newer generation and less consistent usage resources. 
 
 ## Calculation of hourly usage
 
