Update comms plan

--- a/source/documentation/team-information/internal-processes/communication-plan.html.md.erb
+++ b/source/documentation/team-information/internal-processes/communication-plan.html.md.erb
@@ -1,7 +1,7 @@
 ---
 owner_slack: "#coat-notifications"
 title: Cloud Optimisation & Accountability Communications Plan
-last_reviewed_on: 2025-07-28
+last_reviewed_on: 2026-02-10
 review_in: 3 months
 ---
 
@@ -17,8 +17,8 @@ The table below sets out the typical types of communications the Cloud Platform 
 | --------------------------------------------------- | ---------------------------- | ------------------------------------------------------------------------------------------ | --------------------------------------------------------------- |
 | New features or services                            | All stakeholder and users    | As features are shipped                                                                    | #finops-greenops-community                                      |
 | Things we have learned                              | Justice Digital & Technology | Regularly when we have key things to show or promote                                       | Show the Thing                                                  |
-| Things we have learned                              | Platforms & Architecture     | Quarterly                                                                                  | P%A All Hands                                                   |
-| Sharing successes                                   | Chief Technology Officer     | Weekly                                                                                     | One to ones and team meetings                                   |
+| Things we have learned                              | OCTO                         | Quarterly                                                                                  | OCTO All Hands                                                  |
+| Sharing successes                                   | Chief Technology Officer     | Weekly                                                                                     | #octo-team                                                      |
 | Sharing successes                                   | SMT                          | Monthly                                                                                    | Check-in                                                        |
 | Sharing successes                                   | Justice Digital & Technology | Regularly when we have key things to show or promote                                       | Post about them in #chat on Slack/Consider for a Show the Thing |
 | FinOps & GreenOps Blogs and News                    | All stakeholder and users    | Regularly when we have key things to show or promote                                       | #finops-greenops-community                                      |
